@@ -15,6 +15,8 @@ rrr (1.30-3.0) bookworm; urgency=medium
   * Fixes:
     * Crash in HTTP server if empty content type was passed from sender module
     * 10ms delay for all requests in HTTP server due to a poll timeout
+    * In JS module, run GC more often if needed to avoid max number of persistables
+      being exceeded under high load.
 
   * Under the hood:
     * Cache last chdir in message database to reduce the number of this syscall
